; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_cost_layer.c_get_cost_type.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_cost_layer.c_get_cost_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"seg\00", align 1
@SEG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"sse\00", align 1
@SSE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [7 x i8] c"masked\00", align 1
@MASKED = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [7 x i8] c"smooth\00", align 1
@SMOOTH = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [3 x i8] c"L1\00", align 1
@L1 = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [5 x i8] c"wgan\00", align 1
@WGAN = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [44 x i8] c"Couldn't find cost type %s, going with SSE\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_cost_type(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i64 @strcmp(i8* %4, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @SEG, align 4
  store i32 %8, i32* %2, align 4
  br label %44

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @strcmp(i8* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load i32, i32* @SSE, align 4
  store i32 %14, i32* %2, align 4
  br label %44

15:                                               ; preds = %9
  %16 = load i8*, i8** %3, align 8
  %17 = call i64 @strcmp(i8* %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = load i32, i32* @MASKED, align 4
  store i32 %20, i32* %2, align 4
  br label %44

21:                                               ; preds = %15
  %22 = load i8*, i8** %3, align 8
  %23 = call i64 @strcmp(i8* %22, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %21
  %26 = load i32, i32* @SMOOTH, align 4
  store i32 %26, i32* %2, align 4
  br label %44

27:                                               ; preds = %21
  %28 = load i8*, i8** %3, align 8
  %29 = call i64 @strcmp(i8* %28, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0))
  %30 = icmp eq i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %27
  %32 = load i32, i32* @L1, align 4
  store i32 %32, i32* %2, align 4
  br label %44

33:                                               ; preds = %27
  %34 = load i8*, i8** %3, align 8
  %35 = call i64 @strcmp(i8* %34, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0))
  %36 = icmp eq i64 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %33
  %38 = load i32, i32* @WGAN, align 4
  store i32 %38, i32* %2, align 4
  br label %44

39:                                               ; preds = %33
  %40 = load i32, i32* @stderr, align 4
  %41 = load i8*, i8** %3, align 8
  %42 = call i32 @fprintf(i32 %40, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.6, i64 0, i64 0), i8* %41)
  %43 = load i32, i32* @SSE, align 4
  store i32 %43, i32* %2, align 4
  br label %44

44:                                               ; preds = %39, %37, %31, %25, %19, %13, %7
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
